--- a/RaceChronoSharp/RaceChronoSharp.csproj
+++ b/RaceChronoSharp/RaceChronoSharp.csproj
@@ -3,7 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-	 <LangVersion>12</LangVersion>
+	  <LangVersion>12</LangVersion>
+    <Version>0.0.0.*</Version>
+    <PackageId>RaceChronoSharp</PackageId>
+    <Authors>Dennis Blokland</Authors>
+    <Description>Your description</Description>
+    <RepositoryUrl>https://github.com/dennisblokland/RaceChronoSharp</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
