--- a/RaceChronoSharp/RaceChronoSharp.csproj
+++ b/RaceChronoSharp/RaceChronoSharp.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
 	  <LangVersion>12</LangVersion>
-    <Version>0.0.0.*</Version>
+    <Version>0.0.0</Version>
     <PackageId>RaceChronoSharp</PackageId>
     <Authors>Dennis Blokland</Authors>
-    <Description>Your description</Description>
+    <Description>RaceChrono CSV v3 Decoder</Description>
     <RepositoryUrl>https://github.com/dennisblokland/RaceChronoSharp</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
