--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Pack NuGet package
-        run: dotnet pack /RaceChronoSharp/RaceChronoSharp.csproj -c Release -p:PackageVersion=${{ steps.version.outputs.VERSION }} -o ./nupkgs
+        run: dotnet pack -c Release -p:PackageVersion=${{ steps.version.outputs.VERSION }} -o ./nupkgs
 
       - name: Push to NuGet.org
         run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
