--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
           echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Pack NuGet package
-        run: dotnet pack .\RaceChronoSharp\RaceChronoSharp.csproj -c Release -p:PackageVersion=${{ steps.version.outputs.VERSION }} -o ./nupkgs --no-restore --no-build
+        run: dotnet pack /RaceChronoSharp/RaceChronoSharp.csproj -c Release -p:PackageVersion=${{ steps.version.outputs.VERSION }} -o ./nupkgs --no-restore --no-build
 
       - name: Push to NuGet.org
         run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
