--- a/RaceChronoSharp/RaceChronoSharp.csproj
+++ b/RaceChronoSharp/RaceChronoSharp.csproj
@@ -16,5 +16,11 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
   </ItemGroup>
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
 </Project>
