--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,39 @@
-name: Publish NuGet Package
+name: Build and Publish NuGet Package
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch: # manual trigger for publishing
 
 jobs:
-  publish:
+  ci:
+    name: Continuous Integration
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build -c Release
+
+      - name: Run tests
+        run: dotnet test --no-build --verbosity normal
+
+  publish:
+    name: Manual NuGet Publish
+    runs-on: ubuntu-latest
+    needs: ci
+    if: github.event_name == 'workflow_dispatch' # only run on manual trigger
 
     steps:
       - name: Checkout code
